<resources>
    <string name="app_name">X-CITE smart</string>
    <string name="app_contract_list">X-CITE smart -> Verträge</string>
    <string name="app_contract_add">X-CITE smart -> Verträge -> Neuer Vertrag</string>
    <string name="app_contract_edit">X-CITE smart -> Verträge -> Vertrag bearbeiten</string>
    <string name="app_settings">X-CITE smart -> Einstellungen</string>
    <string name="app_api_settings">X-CITE smart -> API Einstellungen</string>
    <string name="app_sync">X-CITE smart -> Synchronisieren</string>
    <string name="app_dashboard">X-CITE smart -> Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_contract_add">Neuer Auftrag</string>
    <string name="title_contract_list">Übersicht</string>
    <string name="title_sync">Synchronisation</string>
    <string name="title_admin">Einstellungen</string>
    <string name="title_admin_api_settings">API Einstellungen</string>
    <string name="title_product_information">Produkt-Infos</string>
    <string name="sync_home">Synchronisation</string>
    <string name="sync_description">Drücken Sie den Button um mit der Synchronisation zu beginnen.</string>
    <string name="sync_warning">Achtung: Beim Synchroniseren werden alle lokalen Daten gelöscht. Bitte führen Sie die Synchronisation nur zum Einrichten der Datenbank aus.</string>
    <string name="contract_add_home">Vertrag anlegen</string>
    <string name="contract_list_home">Aufträge Übersicht</string>
    <string name="button_load_database">Datenbank herunterladen</string>
    <string-array name="salutation_array">
        <item>Bitte wählen</item>
        <item>Herr</item>
        <item>Frau</item>
    </string-array>
    <string-array name="title_array">
        <item>Bitte wählen</item>
        <item>Prof.</item>
        <item>Doctor</item>
    </string-array>
    <string name="show">Anzeigen</string>
    <string name="edit">Bearbeiten</string>
    <string name="add_image">Bild aufnehmen</string>
    <string name="show_image">Bild anzeigen</string>
    <string name="syncronisation">Synchronisieren</string>
    <string name="duplicate">Duplizieren</string>
    <string name="delete">Löschen</string>
    <string name="close">Schließen</string>
    <string name="personal_customer_data">Persönliche Daten Kundin/Kunde</string>
    <string name="personal_customer_data_kaution">Daten Mieter/Antragssteller</string>
    <string name="salutation">Anrede</string>
    <string name="title">Titel</string>
    <string name="lastname">Nachname</string>
    <string name="firstname">Vorname</string>
    <string name="street">Straße</string>
    <string name="housenumber">Hausnr.</string>
    <string name="zip">PLZ</string>
    <string name="city">Ort</string>
    <string name="email">E-Mail</string>
    <string name="birthday">Geburtsdatum</string>
    <string name="phone">Telefon</string>
    <string name="mobil">Mobil</string>
    <string name="whg_miete">Miete</string>
    <string name="whg_kaution">Kaution</string>
    <string name="whg_temp">Mietverhältnis befristet?</string>
    <string name="whg_kuendigung">Ist das Mietverhältnis gekündigt?</string>
    <string name="whg_mietverzug">Haben Sie Ihre Miete mehr als einmal unpünktlich gezahlt?</string>
    <string name="whg_schaeden">Liegen aktuell Schäden am Mietobjekt vor?</string>
    <string name="whg_kaution_no">Vereinbarte Mietkaution unvollständig erbracht?</string>
    <string name="whg_kaution_bes_no">Mietkaution bereits teilweise/vollständig verbraucht?</string>
    <string name="whg_versand">Wohin soll die Bürgschaft versendet werden?</string>
    <string-array name="whg_versand_array">
        <item>Bitte wählen</item>
        <item>an die alte Adresse</item>
        <item>an die neue Adresse</item>
        <item>an den Vermieter</item>
    </string-array>
    <string name="invoice_address">Abweichende Rechnungsadresse</string>
    <string name="invoice_recipient">Rechnungsempfänger</string>
    <string name="business_information">Bei Gewerbekunden: Angaben zur Firma</string>
    <string name="company">Firma</string>
    <string name="register_number">Registernummer</string>
    <string name="register_court">Registergericht</string>
    <string name="sepa_information">Sepa-Lastschriftmandat</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="account_holder">Name des Kontoinhabers</string>
    <string name="sepa_clause">Ich ermächtige die Süwag, Gläubiger-Identikationsnummer DE3000000000062091, Zahlungen von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die von der Süwag auf mein Konto gezogenen Lastschriften einzulösen. Hinweis: Ich kann innerhalb von acht Wochen, beginnend mit dem Belastungsdatum, die Erstattung des belasteten Betrags verlangen. Es gelten dabei die mit meinem Kreditinstitut vereinbarten Bedingungen. Die Mandatsreferenznummer wird mir von der Süwag separat mitgeteilt.</string>
    <string name="sepa_clause_kaution">Ich ermächtige die R+V Versicherung Zahlungen von meinem Konto mittels Lastschrift einzuziehen.</string>
    <string name="power_supply_information">Angaben zur Stromlieferung</string>
    <string name="natural_gas_information">Angaben zur Erdgaslieferung</string>
    <string name="leaser_information">Angaben zum 2.Mieter (optional)</string>
    <string name="lessor_information">Angaben zum Vermieter</string>
    <string name="kaution_information">Angaben zur Kaution</string>
    <string name="kaution_information_description">Kaution wir für folgende Wohnung benötigt</string>
    <string name="kaution_optionen">Weitere Optionen</string>
    <string name="name">Name</string>
    <string name="electric_meter_number">Stromzählernummer</string>
    <string name="natural_gas_meter_number">Erdgaszählernummer</string>
    <string name="electric_meter_reading">Zählerstand</string>
    <string name="moving_in">Neueinzug</string>
    <string name="kaution_neu">Kaution für neues Mietobjekt</string>
    <string name="moving_in_date">Einzugsdatum</string>
    <string name="distributor_change">Versorgerwechsel</string>
    <string name="kaution_umwandeln">Kaution umwandeln</string>
    <string name="distributor_change_date">Wunschtermin</string>
    <string name="kaution_mietbegin">Mietbeginn am</string>
    <string name="kaution_mietvertrag">Mietvertrag unterzeichnet am</string>
    <string name="distributor_name">Bisheriger Stromlieferant</string>
    <string name="distributor_name_gas">Bisheriger Erdgaslieferant</string>
    <string name="distributor_number">Bisherige Stomkundennummer</string>
    <string name="distributor_number_gas">Bisherigerige Erdgaskundennummer</string>
    <string name="power_consumption">Stromverbrauch des Vorjahres in kWh</string>
    <string name="natural_gas_consumption">Erdgasverbrauch des Vorjahres in kWh</string>
    <string name="ordering_clause">Ich beauftrage die Süwag mit der Lieferung des gesamten Bedarfs an elektrischer Energie in Niederspannung ohne registrierende Leistungsmessung für den Eigenverbrauch (in den AGB „Energielieferung“ genannt) für den genannten Stromzähler. Grundlage dafür sind neben diesem Auftrag die Allgemeinen Energielieferbedingungen Sondervertrag Süwag (AGB). Ich bevollmächtige die Süwag zur Kündigung meines bestehenden Stromliefervertrags für die genannte Lieferstelle. Die Süwag ist auch berechtigt, Untervollmachten zu erteilen. Die Allgemeinen Geschäftsbedingungen, die Widerrufsbelehrung und die Informationen zum Datenschutz habe ich zur Kenntnis genommen und akzeptiert.</string>
    <string name="ordering_clause_natural_gas">Ich beauftrage die Süwag mit der Lieferung des gesamten Bedarfs an Erdgas ohne registrierende Leistungsmessung für den Eigenverbrauch (in den AGB „Energielieferung“ genannt) für den genannten Erdgaszähler. Grundlage dafür sind neben diesem Auftrag die Allgemeinen Energielieferbedingungen Sondervertrag Süwag (AGB). Ich bevollmächtige die Süwag zur Kündigung meines bestehenden Erdgasliefervertrags für die genannte Lieferstelle. Die Süwag ist auch berechtigt, Untervollmachten zu erteilen. Die Allgemeinen Geschäftsbedingungen, die Widerrufsbelehrung und die Informationen zum Datenschutz habe ich zur Kenntnis genommen und akzeptiert.</string>
    <string name="ordering_clause_kaution">Hiermit wird die plusForta GmbH als Makler bevollmächtigt. Die Tätigkeit der plusForta GmbH umfasst unter anderem die Vermittlung der
Bürgschaft für private Mietkaution sowie die Prüfung, Bearbeitung und Weiterleitung der eingereichten Unterlagen.</string>
    <string name="marketing_clause">Ich bin damit einverstanden, von der Süwag telefonisch oder per SMS über Angebote und Produkte aus den Bereichen Strom, Gas, Wärme, Elektromobilität und Energieeffizienz informiert zu werden. Ich stimme Befragungen zu Produkten und der Servicequalität der Süwag zu. Meine Vertragsdaten können dazu auch für einen Zeitraum von bis zu 24 Monaten nach Vertragsende zur individuellen Kundenberatung verwendet werden. Meine Vertrags-daten sind die bei der Süwag zur Vertragserfüllung (Vertragsabschluss, -änderung, -beendigung, Abrechnung) erforderlichen und freiwillig angegebenen Daten. Ich bin berechtigt, dieser Nutzung meiner Daten jederzeit gegenüber der Süwag über die oben angegebenen Kontaktdaten (z. B. per Brief, Telefon, Fax, E-Mail) zu widersprechen, ohne dass hierfür andere als die Übermittlungskosten nach den Basistarifen entstehen.</string>
    <string name="save_contract">Als Entwurf speichern</string>
    <string name="close_contract">Schließen</string>
    <string name="save_and_sync_contract">In Ausgangskorb speichern</string>
    <string name="reset_signature">Unterschrift löschen</string>
    <string name="ordering">Auftragserteilung und Einverständniserklärung</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login">Jetzt ganz einfach anmelden!</string>
    <string name="login_headline">Anmelden</string>
    <string name="login_failed">Anmeldung fehlgeschlagen. Bitte überprüfen Sie Ihre Zugangsdaten.</string>
    <string name="api_key">API Schlüssel</string>
    <string name="api_settings">API Einstellungen</string>
    <string name="admin_settings">Weitere Einstellungen</string>
    <string name="makler_settings">Makler Daten</string>
    <string name="cleanup_settings">Löschen von Verträgen</string>
    <string name="cleanup_button_30">Älter als 30 Tage</string>
    <string name="cleanup_button_synced">Alle synchronisierten Verträge</string>
    <string name="cleanup_button_all">Alle Verträge</string>
    <string name="signature">Unterschrift</string>
    <string name="product_information">Preisabfrage</string>
    <string name="product_information_type">Wählen Sie den Vertragstyp.</string>
    <string name="product_information_description">Geben Sie hier Ihre PLZ ein um einen Tarif abzufragen.</string>
    <string name="product_type_power">Stromvertrag</string>
    <string name="product_type_gas">Gasvertrag</string>
    <string name="request">Abfragen</string>
    <string name="button_create_product_information">Übernehmen in neuen Vertrag</string>
    <string name="password_dialog_message">Um die Einstellungen zu Verändern benötigen Sie erweiterte Rechte. Bitte geben Sie das Passwort ein um fortzufahren:</string>
    <string name="password_dialog_error_message">Passwort nicht korrekt.</string>
    <string name="password_dialog_cancel">Abbrechen</string>
    <string name="password_dialog_login">Weiter</string>
    <string name="navigation_contract_personal">Daten Mieter/Antragssteller</string>
    <string name="navigation_contract_bank">Zahlungsinformationen</string>
    <string name="navigation_contract_product_kaution">Miete/Kaution</string>
    <string name="navigation_contract_save_draft">Als Entwurf speichern</string>
    <string name="navigation_contract_save">In Ausgangskorb speichern</string>
</resources>