<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_blue"
    tools:context=".Views.Admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/header_toolbar" />

        <LinearLayout
            style="@style/row_nobg"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/textView5"
                style="@style/headline"
                android:layout_width="match_parent"
                android:background="@color/ui_dark_blue"
                android:text="@string/cleanup_settings"
                android:textAllCaps="true"
                android:textColor="@color/ui_white" />

            <TableLayout
                style="@style/table_blue"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:stretchColumns="*">

                <TableRow style="@style/table_row">

                    <Button
                        android:id="@+id/button_goto_delete_30_days"
                        style="@style/button_blue"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:text="@string/cleanup_button_30" />
                </TableRow>

                <TableRow style="@style/table_row">

                    <Button
                        android:id="@+id/button_goto_delete_synced"
                        style="@style/button_white_outline"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:text="@string/cleanup_button_synced" />
                </TableRow>

                <TableRow style="@style/table_row">

                    <Button
                        android:id="@+id/button_goto_delete_all"
                        style="@style/button_white_outline"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:text="@string/cleanup_button_all" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!-- ADMIN EINSTELLUNGEN -->
        <LinearLayout
            style="@style/row"
            android:background="@color/ui_blue">

            <TextView
                android:id="@+id/textView4"
                style="@style/headline"
                android:layout_width="match_parent"
                android:background="@color/ui_dark_blue"
                android:text="@string/admin_settings"
                android:textAllCaps="true"
                android:textColor="@color/ui_white" />

            <TableLayout
                style="@style/table_blue"
                android:padding="0dp"
                android:stretchColumns="*">

                <TableRow
                    style="@style/table_row"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/button_goto_sync"
                        style="@style/button_td"
                        android:layout_margin="0dp"
                        android:text="@string/title_sync" />
                </TableRow>

                <TableRow style="@style/table_row">

                    <Button
                        android:id="@+id/button_goto_api_settings"
                        style="@style/button_td"
                        android:layout_margin="0dp"
                        android:text="@string/title_admin_api_settings" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <!-- ADMIN EINSTELLUNGEN END -->
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemIconTint="@color/bottom_nav_color"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>