<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:text="@string/password_dialog_message" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                style="@style/input_layout"
                android:layout_marginBottom="0dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/dialog_password_input"
                    style="@style/input"
                    android:layout_marginBottom="20dp"
                    android:background="#edeaea"
                    android:hint="@string/password"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />
            </android.support.design.widget.TextInputLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_password_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:paddingTop="0dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                android:text="@string/password_dialog_error_message"
                android:textColor="@color/colorRed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/password_dialog_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:layout_marginRight="8dp"
                android:width="120dp"
                android:text="@string/password_dialog_cancel" />

            <Button
                android:id="@+id/password_dialog_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                style="@style/button"
                android:text="@string/password_dialog_login" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>