<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            style="@style/table_row_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <TextView
                android:id="@+id/textView25"
                style="@style/headline"
                android:layout_margin="0dp"
                android:background="@color/ui_dark_blue"
                android:gravity="center_vertical"
                android:text="@string/signature"
                android:textColor="@color/ui_white" />

            <ImageButton
                android:id="@+id/signature_dialog_button_reset"
                android:layout_width="24dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:background="@color/ui_dark_blue"
                android:paddingRight="30dp"
                app:srcCompat="@drawable/ic_delete_forever_white_24dp" />
        </TableRow>

        <TableRow
            style="@style/table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <forge12.x_citeapi.Views.InkViewCustomized
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <Button
                android:id="@+id/signature_dialog_button_cancel"
                style="@style/button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/password_dialog_cancel" />

            <Button
                android:id="@+id/signature_dialog_button_save"
                style="@style/button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password_dialog_login" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>